Cleaned up CSS and fixed Dark Mode

--- a/4.1.0/Dark-Theme/custom.css
+++ b/4.1.0/Dark-Theme/custom.css
@@ -1,59 +1,90 @@
-#wrapper {
-    max-width: 90% !important;
-    background: #c8d6e5 !important;
+body.product .product-detail .product-info .product-review p,body.product .product-detail .product-info .product-review div,body.product .product-detail .product-info .product-review ul {
+ color: #eeeeee !important;
 }
 
-
-#category-selector {
-	margin-left: -20px;
-	width: 150px !important;
-}
-.sidebar {
-	background: #c8d6e5;
-	padding: 20px; 
-	margin-top: -20px !important;
-}	
-
-.sidebar ol li {
-    padding: 13px !important;
-    width:  250px !important;
-	margin-left: -10px;
+body.product .product-detail .product-info .title h1 {
+ color: #eeeeee !important;
 }
 
-.sidebar ol li a {
-   font-weight: bold !important;
-   text-transform: uppercase !important;
-   color: #718093 !important;
-
+body.product .sidebar .app-info .content {
+ color: #eeeeee !important;
 }
 
-html, body {
-	background-color: #c8d6e5 !important;
+body.product .sidebar .app-info li .label,
+body.product .sidebar .app-info p span.label {
+ color: #eeeeee !important;
+}
+
+body.product .sidebar .more-by .content a {
+ color: #eeeeee !important;
 }
 
 body.product .sidebar .more-by div.lockup {
 height: 55px !important;
 }
 
-.custom-detail {
-	width: 90%; 
-	margin-left: -10px;
-}
-.left {
-	width: 45px; 
-	float: left;
-}
-.w-75 {
-	width: 175px;
+div.bottom-links {
+	border-top: 1px solid #c8d6e5 !important;
+	padding-bottom: 60px !important;
 }
 
-.more-by .content {
+div.lockup div.msc-button-inner.large {
 	padding-top: 10px;
 }
+
+div.lockup-container .button-area {
+	 width: 200px;
+	 margin-right: -30px;
+}
+
+div.lockup-container .button-area {
+	 width: 200px;
+	 margin-right: -30px;
+}div.lockup-container .title, div.titled-container .title {
+   	border-bottom: 1px solid #c8d6e5 !important;
+   	margin-left: 30px;
+}
+
+div.lockup-container div.lockup div.artwork {
+    margin-right: 0px !important;
+    text-align: center !important;
+}
+
+div.lockup-container div.lockup div.msc-button-inner {
+	 padding-top: 10px;
+}
+
+div.lockup-container div.lockup ul li span.progress-spinner {
+   display: none !important;
+}
+
+div.lockup-container div.lockup ul li {
+   padding: 5px !important;
+}
+
+div.lockup-container div.lockup ul {
+   padding-left: 20px !important;
+   padding-bottom: 0px !important;
+}
+
+div.lockup-container div.lockup {
+    display: block;
+    float: left;
+    width: 30.3% !important;
+    height: 98px;
+    background-color: white !important;
+    padding: 20px !important;
+    margin: 10px !important;
+    max-width: 310px !important;
+    min-height: 160px !important;
+    border-radius: 10px !important;
+}
+
 div.msc-button {
 	background-color: none !important;
 	min-width: 100px !important;
 }
+
 div.msc-button-inner {
     background: #dcdde1 !important;
     border: none !important;
@@ -75,7 +106,7 @@ div.msc-button-inner.large {
     min-width: 150px !important;
     margin-left: 0px !important;
     font-size: 12px !important;
-    font-family: "Helvetica";
+    font-family: \\\"Helvetica\\\";
     text-transform: capitalize;
     line-height: 21px;
     border: 0px solid rgb(42, 73, 118) !important;
@@ -85,103 +116,12 @@ div.msc-button-inner.large {
     -webkit-border-radius: 5px;
 }
 
-div.lockup div.msc-button-inner.large {
-	padding-top: 10px;
-}
-
-div.lockup-container div.lockup div.msc-button-inner {
-	 padding-top: 10px;
-}
-
 div.paginated-container {
 	margin-left: 20px !important;
 }
-div.lockup-container div.lockup {
-    display: block;
-    float: left;
-    width: 30.3% !important;
-    height: 98px;
-    background-color: white !important;
-    padding: 20px !important;
-    margin: 10px !important;
-    max-width: 310px !important;
-    min-height: 160px !important;
-    border-radius: 10px !important;
-}
-
-h2,  th {
-	text-transform: uppercase !important;
-	font-size: 16px  !important;
-}
-
-div.titled-box h2 {
-    border-bottom: 1px solid #c8d6e5 !important;
-}
-
-div.lockup-container .title, div.titled-container .title {
-   	border-bottom: 1px solid #c8d6e5 !important;
-   	margin-left: 30px;
-}
-
-.name a {
-	font-size: 16px  !important;
-	word-wrap: break-word !important;
-}
-
 div.product-info {
 	margin-top: 16px !important;
 }
-div.bottom-links {
-	border-top: 1px solid #c8d6e5 !important;
-	padding-bottom: 60px !important;
-}
-
-ul.list li a {
-	font-size: 12px  !important;
-	text-transform: uppercase !important;
-}
-
-div.lockup-container div.lockup div.artwork {
-    margin-right: 0px !important;
-    text-align: center !important;
-}
-
-div.lockup-container div.lockup ul {
-   padding-left: 20px !important;
-   padding-bottom: 0px !important;
-}
-
-thead  {
-	 padding-bottom: 50px !important;
-	 
-}
-
-div.lockup-container div.lockup ul li {
-   padding: 5px !important;
-}
-
-.installed span {
-	font-size: 11px !important;
-	color: red !important;
-}
-
-div.lockup-container div.lockup ul li span.progress-spinner {
-   display: none !important;
-}
-
-option selected {
-    color: red !important;
-}
-.installation td {
-	padding: 20px !important;
-	background: white !important;
-}
-
-tr:first-child td:first-child { border-top-left-radius: 10px !important;}
-tr:first-child td:last-child { border-top-right-radius: 10px !important; }
-tr:last-child td:first-child { border-bottom-left-radius: 10px !important; }
-tr:last-child td:last-child { border-bottom-right-radius: 10px !important; }
-
 div.showcase {
     height: 200px;
      -webkit-border-bottom-right-radius: 0px !important;
@@ -201,4 +141,107 @@ div.stage>img {
     overflow: hidden;
     -webkit-transition: opacity 1s ease-in-out;
     opacity: 0;
+}
+
+div.titled-box h2 {
+    border-bottom: 1px solid #c8d6e5 !important;
+}
+
+h2,  th {
+	text-transform: uppercase !important;
+	font-size: 16px  !important;
+	color: #718093 !important;
+}
+
+html, body {
+	background-color: #c8d6e5 !important;
+}
+
+option selected {
+    color: red !important;
+}
+p {
+ color: #eeeeee !important;
+}
+
+thead  {
+	 padding-bottom: 50px !important;
+	 
+}
+
+tr:first-child td:first-child { border-top-left-radius: 10px !important;}
+tr:first-child td:last-child { border-top-right-radius: 10px !important; }
+tr:last-child td:first-child { border-bottom-left-radius: 10px !important; }
+tr:last-child td:last-child { border-bottom-right-radius: 10px !important; }
+
+ul.list li a {
+	font-size: 12px  !important;
+	text-transform: uppercase !important;
+	color: #eeeeee !important
+}
+
+.custom-detail {
+	width: 90%; 
+	margin-left: -10px;
+}
+
+.installation td {
+	padding: 20px !important;
+	background: white !important;
+}
+
+.installed span {
+	font-size: 11px !important;
+	color: red !important;
+}
+
+.left {
+	width: 45px; 
+	float: left;
+}
+
+.more-by .content {
+	padding-top: 10px;
+}
+
+.more-by h2 a {
+ color: #eeeeee !important;
+}
+
+.name a {
+	font-size: 16px  !important;
+	word-wrap: break-word !important;
+	color: #eeeeee !important
+}
+
+.sidebar ol li a {
+   font-weight: bold !important;
+   text-transform: uppercase !important;
+   color: #718093 !important;
+
+}
+
+.sidebar ol li {
+    padding: 13px !important;
+    width:  250px !important;
+	margin-left: -10px;
+}
+
+.sidebar {
+	background: #c8d6e5;
+	padding: 20px; 
+	margin-top: -20px !important;
+}	
+
+.w-75 {
+	width: 175px;
+}
+
+#category-selector {
+	margin-left: -20px;
+	width: 150px !important;
+}
+#wrapper {
+    max-width: 90% !important;
+    background: #c8d6e5 !important;
 }
